# text2sql

./: 01-RAGAS.py  02-Trulens.py  03-DeepEval.py  04-LlamaIndexEvaluation.py  05-Text2SQL.py  main.py  metrics_report.csv  pyproject.toml
data/: sakila_predictions.csv
