[project]
name = "09-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datacompy>=0.7.3",
    "llama-index>=0.14.2",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "ragas>=0.3.5",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.1.0",
    "sqlparse>=0.5.3",
]
